--- a/styles/page/page.scss
+++ b/styles/page/page.scss
@@ -6,23 +6,23 @@
 //  Sub-pages
 
 //  Miscellaneous Crafts
-@import "./misc/index.scss"
-@import "./misc/cell_phone_holder.scss"
+@import "./misc/index.scss";
+@import "./misc/cell_phone_holder.scss";
 
 //  Christmas Ornaments
-@import "./ornaments/index.scss"
-@import "./ornaments/2020_covid.scss"
-@import "./ornaments/2020_state.scss"
-@import "./ornaments/name.scss"
+@import "./ornaments/index.scss";
+@import "./ornaments/2020_covid.scss";
+@import "./ornaments/2020_state.scss";
+@import "./ornaments/name.scss";
 
 //  Signs
-@import "./signs/index.scss"
-@import "./signs/man_cave.scss"
-@import "./signs/welcome.scss"
-@import "./signs/parent_and_child.scss"
-@import "./signs/split_letter_monogram.scss"
+@import "./signs/index.scss";
+@import "./signs/man_cave.scss";
+@import "./signs/welcome.scss";
+@import "./signs/parent_and_child.scss";
+@import "./signs/split_letter_monogram.scss";
 
 //  Wine Accessories
-@import "./wine/index.scss"
-@import "./wine/wine_holder.scss"
-@import "./wine/cheese_board.scss"
+@import "./wine/index.scss";
+@import "./wine/wine_holder.scss";
+@import "./wine/cheese_board.scss";
