added lots of css fixes to spacing across website, fatcard css coloring & spacing, card css coloring & spacing. fixed for all device sizes.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -78,3 +78,28 @@ $sub-size: .9rem;
 //  Footer
 $item-w: 2.5vw;
 $item-h: 2.5vh;
+
+
+/******************************************************************************/
+//  Card
+
+//  Container
+$card-h: 25rem;
+$card-w: 20rem;
+$padding-b: 2.5vh;
+$rounded-c: 5px;
+
+//  Img container
+$img-h: 10rem;
+$img-w: 15rem;
+$img-margin: .95rem 0 .5rem 0;
+
+
+//  Img
+$margin: 0 0 .5rem 0;
+
+//  Title container
+$title-margin: .25rem 0 .25rem;
+
+//  Card description
+$card-desc: 1.15rem;
