--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -3,42 +3,15 @@
     width: 100%;
     height: 5vh;
     background-color: $footer-color;
-    justify-content: space-between;
     position: absolute;
     bottom: 0;
     align-items: center;
-    margin: 6rem 0 0 0;
+    //margin: 6rem 0 0 0;
     a {
         color: white;
     }
     p {
         color: white;
-    }
-
-    span {
-        &.tech-used {
-            margin-left: 1vw;
-            img {
-                width: calc(#{$item-w} + 4vw);
-                height: calc(#{$item-h} + 4vh);
-                object-fit: contain;
-            }
-        }
-        color: $text-color;
-        font-size: calc(#{$item-h} - 1vh);
-        &.bgc {
-            background-color: white;
-            border-radius: 1px;
-        }
-    }
-
-    .footer-icon {
-        object-fit: contain;
-        width: calc(#{$item-w} + 4vw);
-        height: calc(#{$item-h} + 4vh);
-        color: white;
-        float: right;
-        margin: 0 1.5vw 0 1.5vw;
     }
 }
 
@@ -47,32 +20,12 @@
         display: flex;
         width: 100%;
         height: 5vh;
-        background-color: $footer-color;
-        justify-content: space-between;
         position: absolute;
         bottom: 0;
-        align-items: center;
 
         span {
-            &.tech-used {
-                margin-left: 1.5vw;
-                img {
-                    width: $item-w;
-                    height: $item-h;
-                    object-fit: contain;
-                }
-            }
             color: $text-color;
             font-size: calc(#{$item-h} - 1vh);
-        }
-
-        .footer-icon {
-            object-fit: contain;
-            width: $item-w;
-            height: $item-h;
-            color: white;
-            float: right;
-            margin: 0 .5vw 0 .5vw;
         }
     }
 }
