--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -93,7 +93,7 @@ div {
 }
 
 span {
-  .buffy-the-buffer {
+  &.buffy-the-buffer {
     margin: 6rem 0 6rem 0;
   }
 }
@@ -112,10 +112,33 @@ span {
 
 //  React Image Gallery
 
+.image-gallery {
+    max-width: 90vw;
+}
+
+.image-gallery-slide {
+  img {
+    width: auto;
+    height: 400px !important;
+  }
+}
+
+/*
+.image-gallery-thumbnail-inner {
+  width: 67px;
+  height: auto;
+  img {
+    width: inherit;
+    height: auto;
+  }
+}
+*/
+
+
 /*
 .image-gallery, .image-gallery-content {
-  //max-width: 500px;
-  //max-height: 500px;
+  max-width: 500px;
+  max-height: 500px;
 }
 
 .image-gallery {
@@ -128,7 +151,7 @@ span {
     height: auto;
     max-height: 50vh;
     object-fit: fill;
-    overflow: hidden;
+    //overflow: hidden;
     object-position: center center;
 }
 
@@ -142,7 +165,38 @@ span {
   Media Queries
 *******************************************************************************/
 
+
 @media screen and (max-width: 768px) {
+  .image-gallery {
+    max-width: 100vw;
+  }
+
+  .image-gallery-slide {
+    img {
+      width: auto;
+      height: 50vw !important;
+    }
+  }
+
+/*
+  button {
+    &.image-gallery-thumbnail {
+      width: 56px;
+      height: auto;
+    }
+  }
+
+.image-gallery-thumbnail-inner {
+  width: 50px;
+  height: auto;
+  img {
+    width: inherit;
+    height: auto;
+  }
+}
+*/
+
+
   .cards-container {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -190,4 +244,25 @@ span {
       }
     }
   }
+
+  /*
+  button {
+    &.image-gallery-thumbnail {
+      width: 80px;
+      height: auto;
+      max-height: 70px;
+    }
+  }
+
+  .image-gallery-thumbnail-inner {
+    width: 70px;
+    height: auto;
+    max-height: 60px;
+    img {
+      width: 70px;
+      height: auto;
+      max-height: 60px;
+    }
+  }
+  */
 }
