fixed some card images. fixed other misc. css

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -23,6 +23,7 @@ $bcard-7: #685d52;
 $bcard-8: #746454;
 $bcard-9: #64544c;
 $bcard-10: #746c54;
+$bcard-11: #5A4B44;
 
 /******************************************************************************/
 
