--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -136,6 +136,7 @@ hr {
         .f-card-description {
             width: 95%;
             margin: 0 auto;
+            text-align: center;
             p {
             }
         }
