--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -98,6 +98,27 @@ span {
   }
 }
 
+//  Bootstrap
+.btn,
+.btn-next {
+  background-color: $bcard-t-d;
+  border: $bcard-t-d;
+  color: $bcard-11;
+}
+
+.btn:hover,
+.btn:focus,
+.btn:active,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-next:hover,
+.btn-next:focus,
+.btn-next:active {
+  color: white !important;
+  background-color: #8e440b !important;
+}
+
 /*******************************************************************************
   Cards
 *******************************************************************************/
@@ -113,7 +134,7 @@ span {
 //  React Image Gallery
 
 .image-gallery {
-    max-width: 90vw;
+  max-width: 90vw;
 }
 
 .image-gallery-slide {
@@ -133,7 +154,6 @@ span {
   }
 }
 */
-
 
 /*
 .image-gallery, .image-gallery-content {
@@ -158,14 +178,13 @@ span {
 
 */
 .fullscreen .image-gallery-slide img {
-    max-height: 100vh !important;
-    height: 90vh !important;
+  max-height: 100vh !important;
+  height: 90vh !important;
 }
 
 /*******************************************************************************
   Media Queries
 *******************************************************************************/
-
 
 @media screen and (max-width: 768px) {
   .image-gallery {
@@ -180,15 +199,15 @@ span {
   }
 
   .fullscreen .image-gallery-slide img {
-      max-height: 100vh !important;
-      height: 90vh !important;
+    max-height: 100vh !important;
+    height: 90vh !important;
   }
 
   .image-gallery.content.fullscreen {
     height: 90vh !important;
   }
 
-/*
+  /*
   button {
     &.image-gallery-thumbnail {
       width: 56px;
@@ -205,7 +224,6 @@ span {
   }
 }
 */
-
 
   .cards-container {
     display: grid;
