changed product descriptions. fixed broken links/routes. added product pictures. changed contact css & verbage.

--- a/styles/page/contact.scss
+++ b/styles/page/contact.scss
@@ -50,6 +50,7 @@
     }
 }
 
+
 .contact-p {
     text-align: left;
     width: 55%;
@@ -104,5 +105,11 @@
                 box-shadow: $box-shadow;
             }
         }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .contact-text {
+        width: 62% !important;
     }
 }
