added new products, pictures, changed some styling for card price. added new content and remove unused verbage.

--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -63,6 +63,9 @@ hr {
 .card-price {
     margin: 2rem 0 0 0;
     font-weight: bold;
+    p {
+        width: 100% !important;
+    }
 }
 
 .holdr {
