--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -1,31 +1,34 @@
 #footer {
-    display: flex;
-    width: 100%;
-    height: 5vh;
-    background-color: $footer-color;
-    position: absolute;
-    bottom: 0;
-    align-items: center;
-    //margin: 6rem 0 0 0;
-    a {
-        color: white;
+  display: flex;
+  width: 100%;
+  height: 5vh;
+  background-color: $footer-color;
+  position: absolute;
+  bottom: 0;
+  align-items: center;
+  padding: 2.5rem 2rem 2.5rem 2rem;
+  //margin: 6rem 0 0 0;
+  a {
+    color: white;
+  }
+  p {
+    color: white;
+    &.jn-foot {
+      margin: 0;
     }
-    p {
-        color: white;
-    }
+  }
 }
 
 @media screen and (min-width: 768px) {
-    #footer {
-        display: flex;
-        width: 100%;
-        height: 5vh;
-        position: absolute;
-        bottom: 0;
-
-        span {
-            color: $text-color;
-            font-size: calc(#{$item-h} - 1vh);
-        }
+  #footer {
+    display: flex;
+    width: 100%;
+    height: 5vh;
+    position: absolute;
+    bottom: 0;
+    span {
+      color: $text-color;
+      font-size: calc(#{$item-h} - 1vh);
     }
+  }
 }
