--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -144,39 +144,37 @@ span {
   }
 }
 
-/*
-.image-gallery-thumbnail-inner {
-  width: 67px;
-  height: auto;
-  img {
-    width: inherit;
-    height: auto;
+button {
+  &.image-gallery-thumbnail {
+    width: 48px !important;
+    height: 48px !important;
+  }
+  &.image-gallery-thumbnail:active,
+  &.image-gallery-thumbnail:focus,
+  &.image-gallery-thumbnail:hover {
+    width: 48px !important;
+    height: 48px !important;
   }
 }
-*/
 
-/*
-.image-gallery, .image-gallery-content {
-  max-width: 500px;
-  max-height: 500px;
+.image-gallery-thumbnail {
+  width: 40px;
+  height: 40px;
+  margin: 1rem;
+  div {
+    width: 40px;
+    height: 40px;
+    &.image-gallery-thumbnail-inner {
+      width: 40px;
+      height: 40px;
+      img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
 }
 
-.image-gallery {
-    width: 70%;
-    height: auto;
-}
-
-.image-gallery-slide img {
-    width: 50%;
-    height: auto;
-    max-height: 50vh;
-    object-fit: fill;
-    //overflow: hidden;
-    object-position: center center;
-}
-
-
-*/
 .fullscreen .image-gallery-slide img {
   max-height: 100vh !important;
   height: 90vh !important;
@@ -198,10 +196,23 @@ span {
     }
   }
 
+  .image-gallery-thumbnail.active {
+    border: 4px solid #337ab7;
+  }
+
   .fullscreen .image-gallery-slide img {
     max-height: 100vh !important;
     height: 90vh !important;
   }
+
+  /*
+  .image-gallery-thumbnail:active,
+  .image-gallery-thumbnail:focus,
+  .image-gallery-thumbnail:hover {
+    width: 48px !important;
+    height: 48px !important;
+  }
+  */
 
   .image-gallery.content.fullscreen {
     height: 90vh !important;
