--- a/styles/components/card.scss
+++ b/styles/components/card.scss
@@ -117,7 +117,6 @@ hr {
             width: 15rem;
             height: 16rem;
             img {
-                //object-fit: contain;
                 width: inherit;
                 height: inherit;
                 border-radius: 2px 0 0 2px;
@@ -130,7 +129,6 @@ hr {
         .f-card-title {
             margin-top: 1.25rem;
             p {
-                //font-size: 1.5rem !important;
                 font-size: 1.5rem;
                 font-weight: bold;
                 text-align: center;
@@ -151,12 +149,32 @@ hr {
     }
 }
 
-.vl {
-    //border-right: 1px solid black;
-    //margin: 0 0.5rem 0 0;
+@media screen and (max-width: 360px) {
+    .hemi-2 {
+        .f-card-title {
+            margin-top: 0.25rem !important;
+            p {
+                font-size: 15px !important;
+                margin: 0 auto;
+            }
+        }
+        .f-card-description {
+            width: 95%;
+            margin: 0 auto;
+            text-align: center;
+            p {
+                font-size: 13px !important;
+            }
+        }
+
+        .card-text-seperator {
+            margin-top: 0.25rem !important;
+            margin-bottom: 0.25rem !important;
+        }
+    }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 539px) {
     .f-card-container {
         width: 85vw !important;
         height: 58vw !important;
@@ -164,7 +182,6 @@ hr {
 
     .hemi-1 {
         .f-card-img {
-            /*width: 24vw !important; */
             width: 35vw !important;
             height: 58vw !important;
         }
@@ -175,12 +192,19 @@ hr {
             margin-top: 0.25rem !important;
             p {
                 font-size: 16px !important;
-                border: 0 0 1px 0 solid green;
+                margin: 0 auto;
             }
         }
-        .card-text-seperator {
-            /*margin: .25rem 0 .25rem 0 !important;*/
-            display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .hemi-2 {
+        .f-card-title {
+            p {
+                margin: 0 auto;
+                font-size: 18px;
+            }
         }
     }
 }
@@ -189,6 +213,7 @@ hr {
     .f-card-title {
         p {
             margin: 0 1rem 0 1rem;
+            font-size: 18px;
         }
     }
 }
