--- a/styles/page/catalog.scss
+++ b/styles/page/catalog.scss
@@ -1,12 +1,12 @@
-.fatcards-container-6 {
+.fatcards-container-even {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
-    margin: 1rem 0 1rem 0;
+    margin: 1rem 0 0rem 0;
 }
 
-.fatcards-container-1 {
+.fatcards-container-odd {
     display: flex;
     margin: 1rem 0 1rem 0;
     justify-content: center;
@@ -18,9 +18,15 @@
 
 
 @media screen and (max-width: 1280px) {
-    .fatcards-container-6 {
+    .fatcards-container-even {
         display: grid;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-gap: 1rem;
+    }
+    .fatcards-container-odd {
+        display:grid;
+        grid-template-rows: 1fr;
         grid-template-columns: 1fr;
         grid-gap: 1rem;
     }
