--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -62,6 +62,7 @@ div {
     h2 {
       &.product-title {
         margin: 2rem 0 2rem 0;
+        text-align: center;
       }
     }
 
@@ -74,7 +75,7 @@ div {
 
     .product-description-container {
       display: grid;
-      grid-template-rows: 1fr 1fr;
+      grid-template-rows: 1fr;
       align-self: center;
       width: 80%;
 
@@ -261,7 +262,7 @@ button {
 
   .product-description-container {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
     align-self: center;
     width: 50% !important;
