new products added. added whats new page & card. added crafters showcase page & card.

--- a/styles/page/page.scss
+++ b/styles/page/page.scss
@@ -4,6 +4,7 @@
 @import "catalog.scss";
 @import "contact.scss";
 @import "custom_cornhole_board.scss";
+@import "crafters_showcase.scss";
 
 
 //  Sub-pages
